@@ -1,7 +1,7 @@
 #!/bin/sh
 MAJOR=5
 MINOR=2
-REV=0
+REV=3
 sh -c "svnversion -n . | cut -d: -f2 | cut -dS -f1 | tr -d '\n'" > ./SVN_VERSION
 SVN_VERSION=`cat ./SVN_VERSION`
 #VERSION="$MAJOR.$MINOR.$REV-r$SVN_VERSION"
