@@ -10,6 +10,9 @@ Date - user - Tool (Simulator | GUI | prv2dim | trf2dim | Other)
 
 	CHANGES:  	explanation of codification changes
 
+2014/02/10 - jgonzale - Simulator - 5.2.3
+	BUGFIX:		Error when reading external dimemas collectives file
+
 2014/02/05 - jgonzale - Simulator | GUI - 5.2.2
 	BUGFIX:		Modules balancing and ratio where wrongly captured in the
 				new configuration parsing
